@@ -8,6 +8,8 @@ OCMock 3.8 (unreleased)
   against XCTest; except on watchOS where it's not supported. (Dave MacLachlan)
 * Added two new stub actions to help with debugging. (Dave MacLachlan)
 * Classes can block OCMock from creating mocks. (Dave MacLachlan)
+* Added function to determine whether a class is a dynamically created mock
+  class or a subclass of one.
 * Deprecated notification observer mocks. This can now be done with XCTest.
 * Various bug-fixes and improvements to developer experience.
 
